--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,2 +1,3 @@
+option('gtkapp', type: 'boolean', value: false, description: 'enable build for GTK app')
 option('man', type: 'boolean', value: true, description: 'build man pages using help2man')
 option('xapp', type: 'boolean', value: true, description: 'enable support for xapp library')
