--- a/docs/man/meson.build
+++ b/docs/man/meson.build
@@ -2,8 +2,13 @@ help2man = find_program('help2man')
 
 mans = [
   ['timeshift', [help2man, '-N', '--output=@OUTPUT@', timeshift]],
-  ['timeshift-gtk', [help2man, '-N', '--output=@OUTPUT@', timeshift_gtk]],
 ]
+
+if enable_gtkapp
+  mans += [
+    ['timeshift-gtk', [help2man, '-N', '--output=@OUTPUT@', timeshift_gtk]],
+  ]
+endif
 
 foreach man: mans
   custom_target(
